--- a/wp-content/themes/ludens/assets/sass/_contact.scss
+++ b/wp-content/themes/ludens/assets/sass/_contact.scss
@@ -1,4 +1,5 @@
 .contact {
+  padding: 20px;
   &__title {
     margin: 20px 0 15px;
     color: $color-gold;
@@ -9,13 +10,20 @@
   }
 
   &__form {
-    width: 600px;
-    margin: 30px auto;
+    margin: 20px;
+    @include screen-lg {
+      width: 600px;
+      margin: 30px auto;
+    }
   }
 
   &__formitem {
-    display: flex;
+    margin-top: 10px;
     padding: 5px 0;
+    @include screen-lg {
+      display: flex;
+      margin: 0;
+    }
 
     > input,
     > span {
@@ -48,6 +56,7 @@
   &__input {
     align-self: center;
     flex-grow: 1;
+    min-width: 100px;
 
     input,
     select,
@@ -68,14 +77,15 @@
   }
 
   &__buttons {
+    display: flex;
     margin: 20px 0;
-    text-align: center;
+    justify-content: center;
   }
 
   &__submit,
   &__back {
-    display: inline-block;
-    min-width: 280px;
+    width: 280px;
+    max-width: 100%;
     padding: 10px;
     cursor: pointer;
     transition: .3s;
@@ -101,6 +111,7 @@
   &__back {
     margin-right: 20px;
     color: $color-gold;
+    background-color: #fff;
 
     &:hover {
       background-color: lighten($color-gold, 30%);
