--- a/wp-content/themes/ludens/assets/sass/_content.scss
+++ b/wp-content/themes/ludens/assets/sass/_content.scss
@@ -16,6 +16,9 @@
   }
 }
 
+.content-wrapper {
+  padding: 20px;
+}
 
 .content-head {
   margin: 0 auto;
@@ -45,7 +48,6 @@
     margin-left: 10px;
     color: $color-text;
     font-family: $font-serif;
-    font-size: $font-sp-lg;
     font-weight: bold;
     @include screen-lg {
       font-size: $font-pc-lg;
@@ -117,10 +119,14 @@
   }
 
   &__head {
-    width: $width-content;
-    margin: auto;
-    font-size: $font-pc-xlg;
+    margin: 0 20px;
+    font-size: $font-sp-xlg;
     font-weight: bold;
+    @include screen-lg {
+      width: $width-content;
+      margin: auto;
+      font-size: $font-pc-xlg;
+    }
 
     &--concept {
       span {
@@ -146,28 +152,43 @@
   }
 
   &__subhead {
-    width: $width-content;
-    margin: auto;
+    margin: auto 20px;
     color: $color-gold;
     font-family: $font-sansserif-kaku;
-    font-size: $font-pc-lg;
+    font-size: $font-sp-lg;
     font-weight: bold;
+    @include screen-lg {
+      margin: auto;
+      width: $width-content;
+      font-size: $font-pc-lg;
+    }
   }
 
   &__text {
-    width: $width-content;
-    margin: 20px auto;
+    margin: 20px;
     color: $color-text-blue;
+    @include screen-lg {
+      width: $width-content;
+      margin: 20px auto;
+    }
   }
 
   &__image-box {
-    display: flex;
-    justify-content: space-between;
-    width: $width-content;
-    margin: 40px auto;
+    margin: 20px;
+    @include screen-lg {
+      display: flex;
+      justify-content: space-between;
+      margin: 40px auto;
+      width: $width-content;
+    }
   }
 
   &__image {
     box-shadow: 0 0 8px rgba(#56361c, .6);
+    @include screen-sm {
+      &:not(:first-child) {
+        margin-top: 20px;
+      }
+    }
   }
 }
