--- a/wp-content/themes/ludens/public/css/style.css
+++ b/wp-content/themes/ludens/public/css/style.css
@@ -878,15 +878,13 @@ table {
   padding: 0 30px; }
 
 .coming-soon {
-  display: flex;
-  justify-content: center;
-  width: 940px;
-  height: 100vh;
-  margin: 0 auto;
-  background-color: #eaeaea; }
-  .coming-soon img {
-    width: 920px;
-    height: 240px; }
+  min-height: 70vh;
+  text-align: center;
+  padding: 50px 0;
+  font-size: 48px; }
+  @media screen and (min-width: 768px) {
+    .coming-soon {
+      width: 940px; } }
 
 .access {
   max-width: 1100px;
