--- a/wp-content/themes/ludens/public/css/style.css
+++ b/wp-content/themes/ludens/public/css/style.css
@@ -423,7 +423,7 @@ table {
 .content-head-box-sp {
   display: flex;
   flex-grow: 1;
-  justify-content: flex-end;
+  justify-content: center;
   margin: 20px 0; }
   @media screen and (min-width: 768px) {
     .content-head-box-sp {
@@ -479,7 +479,11 @@ table {
         width: 940px;
         margin: 20px auto; } }
   .content-main__image-box {
-    margin: 20px; }
+    margin: 20px auto;
+    padding: 0 20px; }
+    @media screen and (max-width: 767px) {
+      .content-main__image-box {
+        max-width: 490px; } }
     @media screen and (min-width: 768px) {
       .content-main__image-box {
         display: flex;
@@ -521,7 +525,10 @@ table {
         width: 360px;
         margin: 0; } }
   .top-content__links {
-    margin-top: 60px; }
+    margin: 60px auto; }
+    @media screen and (max-width: 767px) {
+      .top-content__links {
+        max-width: 400px; } }
     @media screen and (min-width: 768px) {
       .top-content__links {
         display: flex;
@@ -580,7 +587,8 @@ table {
     height: 100px;
     padding: 10px;
     border: 2px solid #28abe1;
-    background-position: center center; }
+    background-position: center center;
+    background-size: cover; }
     @media screen and (min-width: 768px) {
       .top-content__link {
         justify-content: flex-end;
