--- a/wp-content/themes/ludens/style.css
+++ b/wp-content/themes/ludens/style.css
@@ -1,9 +1,9 @@
 /*
-Theme Name: Template for LUDENS ISESAKI
+Theme Name: Theme for LUDENS ISESAKI
 Theme URI:
 Author: mimhhs
 Author URI: mimhhs.net
-Description: Most simple theme for demo
+Description: 結婚式場ルーデンス伊勢崎専用テーマです。
 Version: 1.0
 License:
 License URI:
