--- a/wp-content/themes/wataru/style.css
+++ b/wp-content/themes/wataru/style.css
@@ -1,9 +1,9 @@
 /*
-Theme Name: Default Template
+Theme Name: Theme for Wataru Tanaka
 Theme URI:
 Author: mimhhs
 Author URI: mimhhs.net
-Description: Most simple theme for demo
+Description: 田中航公式Website用テーマです。
 Version: 1.0
 License:
 License URI:
