--- a/wp-content/themes/wataru/assets/sass/_reset.scss
+++ b/wp-content/themes/wataru/assets/sass/_reset.scss
@@ -1,7 +1,7 @@
 @charset 'utf-8';
 
 html {
-  font-family: $font-sansserif;
+  font-family: $fontfamily-default;
   font-size: 62.5%;
   font-weight: normal;
   font-style:normal;
@@ -36,8 +36,8 @@ article,
 footer, header, main,
 menu, nav, section, summary,
 blockquote {
-  font-family: $font-sansserif;
-  font-size: 1.4rem;
+  font-family: $fontfamily-default;
+  font-size: $fontsize-md;
   font-weight: normal;
   font-style:normal;
   line-height: 1.6;
