--- a/wp-content/themes/wataru/assets/sass/style.scss
+++ b/wp-content/themes/wataru/assets/sass/style.scss
@@ -1,4 +1,12 @@
-@import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro');
-@import 'variables';
-@import 'utils';
-@import 'reset';
+@import url('https://fonts.googleapis.com/css?family=Alegreya+Sans+SC:500,500i|Source+Sans+Pro');
+@import '_variables.scss';
+@import '_utils.scss';
+@import '_reset.scss';
+@import '_common.scss';
+
+@import 'modules/_header.scss';
+@import 'modules/_footer.scss';
+@import 'modules/_sidecolumn.scss';
+@import 'modules/_button.scss';
+
+@import 'pages/_index.scss';
