ある位置でヘッダー固定

--- a/wp-content/themes/wataru/assets/sass/_variables.scss
+++ b/wp-content/themes/wataru/assets/sass/_variables.scss
@@ -35,3 +35,7 @@ $width-sidecolumn: 320px;
 ----------------- */
 $breakpoint-sm: 640px;
 $breakpoint-lg: 1000px;
+
+/* z-index
+----------------- */
+$z-header: 100;
