--- a/wp-content/themes/wataru/assets/sass/modules/_header.scss
+++ b/wp-content/themes/wataru/assets/sass/modules/_header.scss
@@ -5,6 +5,12 @@
   height: 50px;
   background: linear-gradient(to bottom, rgba(#000, .4) 50%, rgba(#000, 0));
 
+  &.is-fixed {
+    position: fixed;
+    z-index: $z-header;
+    background: linear-gradient(-3deg, $color-main, darken($color-main, 15%));
+  }
+
   &__nav {
     display: flex;
     align-items: center;
@@ -27,8 +33,8 @@
   }
 
   .menu {
-    flex-grow: 1;
     display: flex;
+    flex-grow: 1;
     justify-content: space-around;
     align-items: center;
   }
