--- a/wp-content/themes/wataru/public/css/style.css
+++ b/wp-content/themes/wataru/public/css/style.css
@@ -119,6 +119,9 @@ table {
   left: 0;
   height: 50px;
   background: linear-gradient(to bottom, rgba(0, 0, 0, 0.4) 50%, rgba(0, 0, 0, 0)); }
+  .w-header.is-fixed {
+    position: fixed;
+    background: linear-gradient(-3deg, #334c66, #111922); }
   .w-header__nav {
     display: flex;
     align-items: center;
@@ -134,8 +137,8 @@ table {
     .w-header__snsitem img {
       width: 36px; }
   .w-header .menu {
-    flex-grow: 1;
     display: flex;
+    flex-grow: 1;
     justify-content: space-around;
     align-items: center; }
   .w-header .menu-item a,
