--- a/wp-content/themes/wataru/assets/sass/style.scss
+++ b/wp-content/themes/wataru/assets/sass/style.scss
@@ -7,6 +7,8 @@
 @import 'modules/_header.scss';
 @import 'modules/_footer.scss';
 @import 'modules/_sidecolumn.scss';
+@import 'modules/_content.scss';
 @import 'modules/_button.scss';
 
 @import 'pages/_index.scss';
+@import 'pages/_schedule.scss';
