--- a/wp-content/themes/wataru/assets/sass/modules/_header.scss
+++ b/wp-content/themes/wataru/assets/sass/modules/_header.scss
@@ -27,8 +27,15 @@
 
   &__snsitem {
     margin: 0 10px;
-    img {
-      width: 36px;
+    font-size: 20px;
+    color: $color-white;
+  }
+
+  &__snslink {
+    transition: .3s;
+
+    &:hover {
+      opacity: .5;
     }
   }
 
