--- a/wp-content/themes/wataru/assets/sass/modules/_content.scss
+++ b/wp-content/themes/wataru/assets/sass/modules/_content.scss
@@ -1,4 +1,10 @@
 .w-content {
+  &--profile {
+    padding: 0 20px 20px;
+    background-color: $color-back;
+    box-shadow: 0 2px 8px rgba(#000, .1);
+  }
+
   &__title {
     display: inline-block;
     margin-bottom: 20px;
