--- a/wp-content/themes/wataru/assets/sass/modules/_footer.scss
+++ b/wp-content/themes/wataru/assets/sass/modules/_footer.scss
@@ -9,10 +9,16 @@
   }
 
   &__snsitem {
-    margin: 0 5px;
+    margin: 0 10px;
+    font-size: 24px;
+    color: $color-main;
+  }
 
-    img {
-      width: 30px;
+  &__snslink {
+    transition: .3s;
+
+    &:hover {
+      opacity: .8;
     }
   }
 
