--- a/wp-content/themes/wataru/assets/sass/style.scss
+++ b/wp-content/themes/wataru/assets/sass/style.scss
@@ -2,6 +2,7 @@
 @import '_variables.scss';
 @import '_utils.scss';
 @import '_reset.scss';
+@import '_icons.scss';
 @import '_common.scss';
 
 @import 'modules/_header.scss';
@@ -12,3 +13,4 @@
 
 @import 'pages/_index.scss';
 @import 'pages/_schedule.scss';
+@import 'pages/_profile.scss';
