--- a/wp-content/themes/mimhhs/style.css
+++ b/wp-content/themes/mimhhs/style.css
@@ -1,8 +1,8 @@
 /*---------------------------------------------------------------------------------
 
-Theme Name: mimhhs_new
-Text Domain: mimhhs_new
-Theme URI: http://www.andersnoren.se/teman/mimhhs_new-wordpress-theme/
+Theme Name: mimhhs
+Text Domain: mimhhs
+Theme URI: http://www.andersnoren.se/teman/mimhhs-wordpress-theme/
 Version: 1
 Description:
 Tags:
