--- a/wp-content/themes/ludens/public/css/style.css
+++ b/wp-content/themes/ludens/public/css/style.css
@@ -139,8 +139,8 @@ table {
       left: 0; } }
   .header__inner {
     display: flex;
-    align-items: center;
     justify-content: space-between;
+    align-items: center;
     height: 60px;
     margin: 0 auto;
     padding: 5px 10px; }
@@ -148,6 +148,14 @@ table {
       .header__inner {
         width: 1100px;
         height: 75px; } }
+  .header__text {
+    margin: auto;
+    padding: 10px;
+    border-top: 1px solid #999;
+    font-family: "YuMincho", "\30D2\30E9\30AE\30CE\660E\671D   ProN W3", "HiraMinProN-W3", "HG\660E\671D  E", "\FF2D\FF33   \FF30\660E\671D", "MS PMincho", "MS \660E\671D", serif; }
+    @media screen and (min-width: 768px) {
+      .header__text {
+        width: 1100px; } }
   .header__logo {
     max-width: 80%;
     margin: 0 10px; }
@@ -496,10 +504,6 @@ table {
       .content-main__image:not(:first-child) {
         margin-top: 20px; } }
 
-.main-view {
-  max-width: 1100px;
-  margin: 0 auto; }
-
 .top-content {
   max-width: 1100px;
   margin: 0 auto;
@@ -525,7 +529,7 @@ table {
         width: 360px;
         margin: 0; } }
   .top-content__links {
-    margin: 60px auto; }
+    margin: 40px auto; }
     @media screen and (max-width: 767px) {
       .top-content__links {
         max-width: 400px; } }
@@ -538,8 +542,8 @@ table {
     margin-bottom: 10px; }
     @media screen and (min-width: 768px) {
       .top-content__item {
-        width: 300px;
-        margin-bottom: 40px; } }
+        width: 320px;
+        margin-bottom: 20px; } }
     .top-content__item:nth-child(even) .top-content__link {
       justify-content: flex-end; }
     .top-content__item:nth-child(1) .top-content__link {
