--- a/wp-content/themes/ludens/assets/sass/_footer.scss
+++ b/wp-content/themes/ludens/assets/sass/_footer.scss
@@ -1,17 +1,93 @@
 .footer {
-  padding: 10px;
+  padding: 0 10px;
   background-image: url('../images/bg-blue.jpg');
+  color: $color-text;
+
+  &__groups {
+    margin: auto;
+    @include screen-lg {
+      display: flex;
+      max-width: $width-wrapper;
+      padding: 5px 0;
+    }
+  }
+
+  &__group {
+    padding: 10px;
+    @include screen-sm {
+      &+ & {
+        border-top: 1px solid rgba($color-text, .6);
+      }
+    }
+    @include screen-lg {
+      min-width: 25%;
+      &+ & {
+        border-left: 1px solid rgba($color-text, .6);
+      }
+    }
+  }
+
+  &__group-title {
+    font-size: $font-sp-sm;
+    font-weight: bold;
+    @include screen-lg {
+      font-size: 12px;
+    }
+  }
+
+  &__links {
+    @include screen-sm {
+      display: flex;
+      flex-wrap: wrap;
+    }
+  }
+
+  &__linkitem {
+    @include screen-sm {
+      width: 50%;
+    }
+  }
+
+  &__link {
+    position: relative;
+    display: block;
+    padding: 5px 15px;
+    font-family: $font-serif;
+    font-size: $font-sp-sm;
+    transition: .3s;
+    @include screen-lg {
+      font-size: 12px;
+    }
+
+    &::before {
+      position: absolute;
+      top: 0;
+      bottom: 0;
+      left: 5px;
+      width: 0;
+      height: 0;
+      margin: auto;
+      border-top: 3px solid transparent;
+      border-bottom: 3px solid transparent;
+      border-left: 5px solid;
+      content: '';
+    }
+
+    &:hover {
+      opacity: .6;
+    }
+  }
 
   &__copyright {
     margin: 0 auto;
+    border-top: 1px solid rgba($color-text, .6);
     text-align: center;
     @include screen-lg {
-      width: $width-wrapper;
+      max-width: $width-wrapper;
       text-align: right;
     }
 
     small {
-      color: #fff;
       font-family: $font-serif;
       font-size: $font-pc-sm;
       font-weight: bold;
